--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: "16x"
+          node-version: 16x
           registry-url: https://registry.npmjs.org/
 
       - name: "Deploy to Vercel"
