--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,16 @@ jobs:
           node-version: 16
           registry-url: https://registry.npmjs.org/
 
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
+        env:
+            CI: true
+  
+      - name: Build
+        run: yarn build
+        env:
+            CI: true
+
       - name: "Deploy to Vercel"
         run: |
           prodRun=""
